# ChangeLog for xfce-extra/xfce4-taskmanager
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-taskmanager/ChangeLog,v 1.45 2008/12/03 23:50:59 angelos Exp $

  03 Dec 2008; Christoph Mende <angelos@gentoo.org>
  -xfce4-taskmanager-0.4.0.ebuild:
  Removed old

  20 Nov 2008; Brent Baude <ranger@gentoo.org>
  xfce4-taskmanager-0.4.1.ebuild:
  Marking xfce4-taskmanager-0.4.1 ppc64 for bug 245970

  12 Nov 2008; Jeroen Roovers <jer@gentoo.org>
  xfce4-taskmanager-0.4.1.ebuild:
  Stable for HPPA (bug #245970).

  08 Nov 2008; Raúl Porcel <armin76@gentoo.org>
  xfce4-taskmanager-0.4.1.ebuild:
  alpha/arm/ia64/sparc/x86 stable wrt #245970

  08 Nov 2008; nixnut <nixnut@gentoo.org> xfce4-taskmanager-0.4.1.ebuild:
  Stable on ppc wrt bug 245970

  08 Nov 2008; Jeremy Olexa <darkside@gentoo.org>
  xfce4-taskmanager-0.4.1.ebuild:
  amd64 stable, bug 245970

  12 Oct 2008; Diego Pettenò <flameeyes@gentoo.org>
  xfce4-taskmanager-0.4.1.ebuild:
  Fix build dependencies.

*xfce4-taskmanager-0.4.1 (04 Oct 2008)

  04 Oct 2008; Christoph Mende <angelos@gentoo.org>
  -xfce4-taskmanager-0.3.2-r1.ebuild, +xfce4-taskmanager-0.4.1.ebuild:
  Version bump and removed old

  26 Sep 2008; Christoph Mende <angelos@gentoo.org>
  xfce4-taskmanager-0.3.2-r1.ebuild, xfce4-taskmanager-0.4.0.ebuild:
  Removed unneeded inherit autotools and added missing IUSE

  26 Sep 2008; Jeroen Roovers <jer@gentoo.org>
  xfce4-taskmanager-0.4.0.ebuild:
  Stable for HPPA (bug #235407).

  27 Aug 2008; Raúl Porcel <armin76@gentoo.org>
  xfce4-taskmanager-0.4.0.ebuild:
  alpha/ia64 stable wrt #235407

  24 Aug 2008; Markus Rothe <corsair@gentoo.org>
  xfce4-taskmanager-0.4.0.ebuild:
  Stable on ppc64; bug #235407

  24 Aug 2008; Friedrich Oslage <bluebird@gentoo.org>
  xfce4-taskmanager-0.4.0.ebuild:
  Stable on sparc, bug #235407

  22 Aug 2008; Markus Meier <maekke@gentoo.org>
  xfce4-taskmanager-0.4.0.ebuild:
  x86 stable, bug #235407
