@@ -1,6 +1,6 @@
 DIST xfce4-taskmanager-0.4.0.tar.bz2 197438 RMD160 345ea56ce780d42652d63f6becaacbb2a5e259f3 SHA1 d0094289fbc6551dc898ba7a00b9854fa861077d SHA256 0e4f2e24b6734fee0baade309c22050fbc1987f10cfae2b8b8ad8c9a3adebdfd
 DIST xfce4-taskmanager-0.4.1.tar.bz2 210420 RMD160 c0a9711a1d12f528ee15022f2968fc25e500ba7f SHA1 e93824f9e9a369f6353f4b22251ff7f18468dbd4 SHA256 1d316d34a9363dadc3526bb284867013277a135fb7bc323acd72125298e4c33b
 EBUILD xfce4-taskmanager-0.4.0.ebuild 540 RMD160 3a471f209ed5f835ad68030e44a1a07417ccf316 SHA1 d009ead25a06c7bc42d71bd2c82feb0f44eead67 SHA256 43b2f7dda6b3cc2756eaa0548ef1a0c0159d39538f626416f2515788f45509b7
-EBUILD xfce4-taskmanager-0.4.1.ebuild 650 RMD160 bb731ad780bf5fa3820fe87929cd1de4b3a3c410 SHA1 df31ff460d877334ae5ee4db24cee8c40ba049b1 SHA256 d9c7bdb8030da02bcf621d54dc2008a00cd429a4dfbd2f995c9a6f3172c1f2c4
-MISC ChangeLog 6008 RMD160 f0aca45be0827d6e2d538c86fdfee5106f77b315 SHA1 a866f3dd5db4225a10664ca9b0fd98b64f6c4ae7 SHA256 1a97b5c3f35c9410c18bc2f9ee70af635faed264ca4885f9b5a8c0d2c2d733c3
+EBUILD xfce4-taskmanager-0.4.1.ebuild 793 RMD160 f4eb6b4f03a6865c97a30d79d2793be3df4842e8 SHA1 71d70bd56699065495b3731fddc0df4cd21b5b24 SHA256 1d1c5e95ff7a118bffd65fbecb8c98c12f47033c63191addb708b592d9d884f2
+MISC ChangeLog 6120 RMD160 d50403ce96a512322be4272e646f05eecdadbda3 SHA1 31cefdce3867f1b496c5be915d35139be99def9d SHA256 4f04894e670a4258d0531f2c95e2dd6495f53b250410a5df40da243afc27e099
 MISC metadata.xml 159 RMD160 43722935bd7b4db7fe8db681054f2e53c4a5f7ce SHA1 15958ad72e234ba572c9534533c21532eb6bc0fd SHA256 900ea49b6703fce452e205b85226bf1f994725963e5840da501182e7487d0e63
