@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/xfce4-taskmanager
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-taskmanager/ChangeLog,v 1.45 2008/12/03 23:50:59 angelos Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-taskmanager/ChangeLog,v 1.46 2009/08/25 09:00:58 ssuominen Exp $
+
+  25 Aug 2009; Samuli Suominen <ssuominen@gentoo.org>
+  xfce4-taskmanager-0.4.1.ebuild:
+  Use xfconf.eclass.
 
   03 Dec 2008; Christoph Mende <angelos@gentoo.org>
   -xfce4-taskmanager-0.4.0.ebuild:
